--- a/RecipeApplication/RecipeApplication.csproj
+++ b/RecipeApplication/RecipeApplication.csproj
@@ -3,5 +3,14 @@
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
     </PropertyGroup>
+    
+    <ItemGroup>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0" />
+    </ItemGroup>
+    
+    <ItemGroup>
+      <Folder Include="Data" />
+    </ItemGroup>
 
 </Project>
