--- a/RecipeApplication/RecipeApplication.csproj
+++ b/RecipeApplication/RecipeApplication.csproj
@@ -2,15 +2,12 @@
 
     <PropertyGroup>
         <TargetFramework>net5.0</TargetFramework>
+        <UserSecretsId>7d61771d-94e3-4159-a77b-05fa1fb4589a</UserSecretsId>
     </PropertyGroup>
     
     <ItemGroup>
         <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="5.0.0" />
-    </ItemGroup>
-    
-    <ItemGroup>
-      <Folder Include="Data" />
     </ItemGroup>
 
 </Project>
